# R6SSS_Discord

./: .gitignore  .replit  CHANGELOG.md  Dockerfile  OSS.md  OSS.rst  PRIVACY-POLICY.md  PRIVACY_POLICY.md  README-ja.md  README.md  TERMS-OF-SERVICE.md  crowdin.yml  keep_alive.py  localizations.py  main.py  pyproject.toml  replit.nix  requirements.txt
.github/: FUNDING.yml
devscripts/: update_dependency.bat
locales/: en_GB.json  en_US.json  ja.json
resources/icons/: Platform.pdn
resources/images/banner/: R6SSS_Banner_1920x1080.afphoto
src/: api.py  app.py  client.py  config.py  db.py  debug_logger.py  embeds.py  heartbeat.py  icons.py  internal_error_reporter.py  kumasan.py  localizations.json  localizations.py  logger.py  main.py  maintenance_schedule.py  owner_message.py  platform_icon.py  server_status.py  serverstatus.py  serverstatus_api.py  status_icon.py  status_indicator.py  statusicon.py  statusindicator.py  web.py
src/cogs/: settings.py
src/cogs/commands/: general.py  settings.py  status.py
src/cogs/tasks/: server_status_embed.py
src/locales/: en_GB.json  en_US.json  ja.json
