[project]
name = "r6sss-discord"
version = "2.0.0"
description = "R6SSS Discord Bot"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "attrdict>=2.0.1",
    "httpx==0.27.*",
    "py-cord==2.6.*",
    "pycord-i18n==1.2.*",
    "pymongo>=4.13.0",
    "r6sss",
]

[tool.uv.sources]
r6sss = { git = "https://github.com/Milkeyyy/R6SSS_Python" }
