[project]
name = "r6sss-discord"
version = "2.0.0"
description = "R6SSS Discord Bot"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "httpx==0.27.*",
    "py-cord==2.6.*",
    "pycord-i18n==1.2.*",
    "pymongo>=4.13.0",
    "python-box>=7.3.2",
    "r6sss",
    "six>=1.17.0",
]

[tool.uv.sources]
r6sss = { git = "https://github.com/Milkeyyy/R6SSS_Python" }
